test/libsolidity/syntaxTests/modifiers/definition_in_library.sol
library L {
    modifier mv virtual { _; }
}
// ----
// TypeError 3275: (16-42): Modifiers in a library cannot be virtual.
